--- a/app/design/frontend/foundation/default/template/page/html/trust.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/trust.phtml
@@ -13,7 +13,7 @@
         </a>
     </li>
     <li>
-        <a href="<?php echo Mage::getBaseUrl(); ?>hersteller">
+        <a href="<?php echo Mage::getBaseUrl(); ?>index.php/fileuploader/download/download/?d=1&amp;file=custom/upload/File-1546955704.pdf">
         <img src="<? echo $this->getSkinUrl('dist/assets/img/trust/zertifizierter-haendler.png'); ?>" alt="Zertifizierter H&auml;ndler"/>
         <p>Zertifizierter H&auml;ndler und Vertragspartner</p>
         </a>
