change js for hc

--- a/skin/frontend/foundation/default/src/assets/scss/custom/_product.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_product.scss
@@ -213,6 +213,11 @@
         }
       }
     }
+    .mwst-price {
+      .price {
+        font-size: rem-calc(19);
+      }
+    }
     .skonto-price {
       .price {
         color: $success-color;
