--- a/app/design/frontend/foundation/default/template/catalog/product/price.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/price.phtml
@@ -279,7 +279,7 @@ $_msrpPrice = $this->helper('tax')->getPrice($_product, $_product->getMsrp());
                         </p>
                         <p class="mwst-price">
                             <span class="price-label"></span>
-                            <span class="price_mwst" >
+                            <span class="price_mwst" id="price-including-tax-<?php echo $_id ?><?php echo $this->getIdSuffix() ?>">
                             <?php $_store_id = Mage::app()->getStore()->getId(); ?>
                             <?php if ($_store_id == '5'): /* B2C */ ?>
                                 <?php if ($_finalPrice == $_price): ?>
@@ -506,7 +506,7 @@ $_msrpPrice = $this->helper('tax')->getPrice($_product, $_product->getMsrp());
                     ?>
                     <p class="mwst-price">
                         <span class="price-label"></span>
-                        <span class="price_mwst">
+                        <span class="price_mwst" id="price-including-tax-<?php echo $_id ?><?php echo $this->getIdSuffix() ?>">
                             <?php $_store_id = Mage::app()->getStore()->getId(); ?>
                             <?php if ($_store_id == '5'): /* B2C */ ?>
                                 <?php if ($_finalPrice == $_price): ?>
