--- a/skin/frontend/foundation/default/src/assets/scss/custom/_cms.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_cms.scss
@@ -67,3 +67,27 @@
     }
   }
 }
+
+.cms-zertifizierter-haendler {
+  .std {
+    h2 {
+      @extend .h4;
+    }
+    .invert h2, .invert p {
+      color: $white;
+    }
+    .invert {
+      background: $primary-color;
+      @extend .margin-bottom-3;
+    }
+    $zh-round: 110px;
+    .round-left {
+      border-top-left-radius: $zh-round;
+      border-bottom-left-radius: $zh-round;
+    }
+    .round-right {
+      border-top-right-radius: $zh-round;
+      border-bottom-right-radius: $zh-round;
+    }
+  }
+}
