--- a/skin/frontend/foundation/default/src/assets/scss/app.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/app.scss
@@ -69,6 +69,7 @@ $lg-path-images: "../../../dist/assets/img";
 
 @import "custom/account";
 @import "custom/alerts";
+@import "custom/banner";
 @import "custom/breadcrumb";
 @import "custom/browser";
 @import "custom/buttons";
