add image to footer 30years

--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -14,6 +14,10 @@
             </a>
             <img src="<?php echo $this->getSkinUrl('dist/assets/img/gastrodax-logo.png'); ?>"
                      alt="Logo" class="footer-logo"/>
+            <a href="https://www.newgastroline.de" target="_blank">
+                <img src="<?php echo $this->getSkinUrl('dist/assets/img/30jahre.png') ?>"
+                     alt="30 Jahre New Gastroline GmbH">
+            </a>
             <a href="<?php echo Mage::getUrl('', array('_direct' =>'jobs')); ?>">
                 <img src="<?php echo $this->getSkinUrl('dist/assets/img/jobs.png') ?>"
                      alt="Jobs &amp; Careers">
