--- a/skin/frontend/foundation/default/src/assets/scss/custom/_cms.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_cms.scss
@@ -98,3 +98,130 @@
     }
   }
 }
+
+.timeline {
+  position: relative;
+  margin: 0 auto;
+  &::after {
+    content: '';
+    position: absolute;
+    width: 6px;
+    background-color: $primary-color;
+    top: 0;
+    bottom: 0;
+    left: 31px;
+    margin-left: -3px;
+    @include breakpoint(medium up) {
+      left: 50%;
+    }
+  }
+  .container {
+    position: relative;
+    background-color: inherit;
+    padding: 10px 40px;
+    @include breakpoint(small only) {
+      width: 100%;
+      padding-left: 70px;
+      padding-right: 25px;
+    }
+    @include breakpoint(medium up) {
+      width: 50%;
+    }
+    &::after {
+      content: '';
+      position: absolute;
+      width: 25px;
+      height: 25px;
+      right: -12.5px;
+      background-color: $white;
+      border: 4px solid $secondary-color;
+      top: 20px;
+      border-radius: 50%;
+      z-index: 1;
+    }
+    @include breakpoint(small only) {
+      &::before {
+        content: " ";
+        height: 0;
+        position: absolute;
+        top: 22px;
+        width: 0;
+        z-index: 1;
+        right: 30px;
+        left: 60px;
+        border: medium solid white;
+        border-width: 10px 10px 10px 0;
+        border-color: transparent $primary-color transparent transparent;
+      }
+    }
+    .content {
+      text-align: center;
+      padding: 20px 30px;
+      position: relative;
+      border-radius: 6px;
+      border: 4px solid $primary-color;
+      &::before {
+        left: 60px;
+        border: medium solid $primary-color;
+        border-width: 10px 10px 10px 0;
+        border-color: transparent $primary-color transparent transparent;
+      }
+      img {
+        width: 120px;
+      }
+    }
+  }
+  .left {
+    left: 0;
+    &::before {
+      content: " ";
+      height: 0;
+      position: absolute;
+      top: 22px;
+      width: 0;
+      z-index: 1;
+      right: 30px;
+      border: medium solid $primary-color;
+      @include breakpoint(small only) {
+        border-width: 10px 10px 10px 0;
+        border-color: transparent $primary-color transparent transparent;
+      }
+      @include breakpoint(medium up) {
+        border-width: 10px 0 10px 10px;
+        border-color: transparent transparent transparent $primary-color;
+      }
+    }
+    &::after {
+      @include breakpoint(small only) {
+        left: 15px;
+      }
+    }
+  }
+  .right {
+    left: 0;
+    @include breakpoint(medium up) {
+      left: 50%;
+    }
+    &::before {
+      content: " ";
+      height: 0;
+      position: absolute;
+      top: 22px;
+      width: 0;
+      z-index: 1;
+      @include breakpoint(medium up) {
+        left: 30px;
+      }
+      border: medium solid $primary-color;
+      border-width: 10px 10px 10px 0;
+      border-color: transparent $primary-color transparent transparent;
+    }
+    &::after {
+      left: 15px;
+      @include breakpoint(medium up) {
+        left: -12.5px;
+      }
+    }
+  }
+
+}
