--- a/skin/frontend/foundation/default/src/assets/scss/app.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/app.scss
@@ -82,6 +82,7 @@ $lg-path-images: "../../../dist/assets/img";
 @import "custom/footer";
 @import "custom/globals";
 @import "custom/grid";
+@import "custom/hamburgers";
 @import "custom/header";
 @import "custom/img";
 @import "custom/labels";
