--- a/skin/frontend/foundation/default/src/assets/scss/_settings.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/_settings.scss
@@ -496,14 +496,16 @@ $meter-fill-bad: $alert-color;
 
 $offcanvas-sizes: (
         small: 250px,
+        medium: 320px,
 );
 $offcanvas-vertical-sizes: (
         small: 250px,
+        medium: 320px,
 );
 $offcanvas-background: $white;
-$offcanvas-shadow: 0 0 10px rgba($black, 0.7);
-$offcanvas-inner-shadow-size: 20px;
-$offcanvas-inner-shadow-color: rgba($black, 0.25);
+$offcanvas-shadow: 0;
+$offcanvas-inner-shadow-size: 0;
+$offcanvas-inner-shadow-color: 0;
 $offcanvas-overlay-zindex: 11;
 $offcanvas-push-zindex: 12;
 $offcanvas-overlap-zindex: 13;
@@ -511,7 +513,7 @@ $offcanvas-reveal-zindex: 12;
 $offcanvas-transition-length: 0.5s;
 $offcanvas-transition-timing: ease;
 $offcanvas-fixed-reveal: true;
-$offcanvas-exit-background: rgba($white, 0.25);
+$offcanvas-exit-background: rgba($white, 0.5);
 $maincontent-class: 'off-canvas-content';
 
 // 26. Orbit
