--- a/app/design/frontend/foundation/default/template/page/html/trust.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/trust.phtml
@@ -33,7 +33,7 @@
     <li>
         <a href="<?php echo Mage::getBaseUrl(); ?>referenzen">
         <img src="<? echo $this->getSkinUrl('dist/assets/img/trust/zufriedene-kunden.png'); ?>" alt="Zufriedene Kunden"/>
-        <p>&Uuml;ber 50.000 zufriedene Kunden</p>
+        <p>&Uuml;ber 100.000 zufriedene Kunden weltweit</p>
         </a>
     </li>
     <li>
