--- a/app/design/frontend/foundation/default/template/catalog/product/list-piazza.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/list-piazza.phtml
@@ -106,15 +106,15 @@ $_helper = $this->helper('catalog/output');
                 <?php
                 $i = 0;
                 $min = 1;
-                $max = 7;
+                $max = 6;
                 $random = rand($min, $max);
                 ?>
                 <?php foreach ($_productCollection as $_product): ?>
                     <?php if ($i == $random) { ?>
                         <li class="item action">
-                            <a href="<?php echo Mage::getUrl('', array('_direct' => 'karneval')); ?>">
-                                <img src="<?php echo $this->getSkinUrl('dist/assets/img/karneval-grid.jpg') ?>"
-                                     alt="Karneval 3 Prozent Rabatt auf alles!!!"/>
+                            <a href="<?php echo Mage::getUrl('', array('_direct' => 'kaffee')); ?>">
+                                <img src="<?php echo $this->getSkinUrl('dist/assets/img/piazza-doro-banner.jpg') ?>"
+                                     alt="Piazza Doro"/>
                             </a>
                         </li>
                     <?php } ?>
