--- a/app/design/frontend/foundation/default/template/catalog/product/list_jura.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/list_jura.phtml
@@ -68,8 +68,24 @@ $_helper = $this->helper('catalog/output');
         <?php $_collectionSize = $_productCollection->count() ?>
         <?php $_columnCount = $this->getColumnCount(); ?>
             <ul class="products-grid">
-                <?php $i = 0;
-                foreach ($_productCollection as $_product): ?>
+                <?php
+                $i = 0;
+                $min = 1;
+                $max = 6;
+                $random = rand($min, $max);
+                ?>
+                <?php foreach ($_productCollection as $_product): ?>
+                <?php if ($i == $random) { ?>
+                    <li class="item action">
+                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'kaffee')); ?>" title="Kaffee und Kaffeebohnen">
+                            <img src="<?php echo $this->getSkinUrl('dist/assets/img/piazza-doro-banner.jpg') ?>"
+                                 alt="Piazza Doro"/>
+                        </a>
+                        <div class="product-name">
+                            <a href="<?php echo Mage::getUrl('', array('_direct' => 'kaffee')); ?>" title="Kaffee &amp; Kaffeebohnen">Kaffee &amp; Kaffeebohnen</a>
+                        </div>
+                    </li>
+                <?php } ?>
                 <li class="item">
                     <?php if ($_product->getFinalPrice() < $_product->getPrice()) { ?>
                         <?php $_savingPercent = 100 - round(($_product->getFinalPrice() / $_product->getPrice()) * 100); ?>
