--- a/app/design/frontend/foundation/default/template/catalog/product/list_without_toolbar-piazza.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/list_without_toolbar-piazza.phtml
@@ -1,8 +1,18 @@
 <?php
-if (!function_exists('clean')) {
-    function clean($string)
+/**
+ * @project gastrodax
+ *
+ * @author pbreitsprecher
+ * @copyright 2017
+ * @license https://opensource.org/licenses/MIT The MIT License (MIT)
+ *
+ * @last_modified 27.11.17 16:40
+ * @file list_without_toolbar.phtml
+ *
+ */
+if (!function_exists('clean_list_without_toolbar')) {
+    function clean_list_without_toolbar($string)
     {
-
         $string = str_replace(' ', '-', $string); // Replaces all spaces with hyphens.
 //$string = preg_replace('/[^A-Za-z0-9\-]/', '', $string); // Removes special chars.
         $string = strtolower($string);
@@ -48,7 +58,6 @@ $_helper = $this->helper('catalog/output');
     <p class="note-msg"><?php echo $this->__('There are no products matching the selection.') ?></p>
 <?php else: ?>
     <div class="category-products">
-        <?php echo $this->getToolbarHtml() ?>
         <?php // List mode ?>
         <?php if ($this->getMode() != 'grid'): ?>
             <?php $_iterator = 0; ?>
@@ -140,7 +149,7 @@ $_helper = $this->helper('catalog/output');
                         <?php if ($_product->getAttributeText('manufacturer')): ?>
                             <?php $brand = $_product->getAttributeText('manufacturer') ?>
                             <div class="product-brand">
-                                <img src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA); ?>catalog/brands/<?php echo clean($brand) ?>.png"
+                                <img src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA); ?>catalog/brands/<?php echo clean_list_without_toolbar($brand) ?>.png"
                                      alt="<?php echo $brand ?> Logo">
                             </div>
                         <?php endif; ?>
@@ -157,13 +166,7 @@ $_helper = $this->helper('catalog/output');
                             ->setIdSuffix($idSuffix = 'amit')
                             ->toHtml(); ?>
                         <?php //echo $this->getPriceHtml($_product, true) ?>
-                        <?php if ($_product->getData('commissioning') == 1): ?>
-                            <?php $productAttribute = $_product->getResource()->getAttribute('commissioning'); ?>
-                            <?php $_label = $productAttribute->getStoreLabel(Mage::app()->getStore()->getId()); ?>
-                            <span class="commissioning"><?php echo $_label; ?></span>
-                        <?php endif; ?>
                     </li>
-                    <?php $i++; ?>
                 <?php endforeach ?>
             </ul>
             <script type="text/javascript">
@@ -172,8 +175,5 @@ $_helper = $this->helper('catalog/output');
                 });
             </script>
         <?php endif; ?>
-        <div class="toolbar-bottom">
-            <?php echo $this->getToolbarHtml() ?>
-        </div>
     </div>
 <?php endif; ?>
