add Schlag den Preis

--- a/app/design/frontend/foundation/default/template/cataloginventory/qtyincrements.phtml
+++ b/app/design/frontend/foundation/default/template/cataloginventory/qtyincrements.phtml
@@ -30,6 +30,6 @@
 ?>
 <?php if ($this->getProductQtyIncrements()) : ?>
     <li class="product-pricing">
-        <?php echo $this->__('%s ist erhältlich in Verpackungseinheit von %s Stück', $this->getProductName(), $this->getProductQtyIncrements()) ?>
+        <?php echo $this->__('%s ist erh&auml;ltlich in Verpackungseinheiten zu je %s St&uuml;ck', $this->getProductName(), $this->getProductQtyIncrements()) ?>
     </li>
 <?php endif ?>
