add Schlag den Preis

--- a/app/design/frontend/foundation/default/template/catalog/product/list-schlag-den-preis.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/list-schlag-den-preis.phtml
@@ -162,7 +162,7 @@ $_helper = $this->helper('catalog/output');
                     </li>
                     <?php $i++; ?>
                 <?php endforeach ?>
-                <div class="reveal tiny" id="schlagdenpreis" data-reveal></div>
+                <div class="reveal small" id="schlagdenpreis" data-reveal></div>
                 <script>
                     jQuery('.schlagdenpreis').click(function () {
                         jQuery.ajax({
