--- a/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
@@ -113,11 +113,36 @@
       -webkit-transition: all 0.3s;
       transition: all 0.3s;
     }
-    &.action .product-name {
-      margin: 5px;
-      font-size: rem-calc(15);
-      line-height: 1rem;
-      word-wrap: break-word;
+    &.action {
+      &:hover {
+        animation: shake .8s cubic-bezier(.36,.07,.19,.97) both;
+        transform: translate3d(0, 0, 0);
+        backface-visibility: hidden;
+        perspective: 1000px;
+      }
+      @keyframes shake {
+        10%, 90% {
+          transform: translate3d(-1px, 0, 0);
+        }
+
+        20%, 80% {
+          transform: translate3d(2px, 0, 0);
+        }
+
+        30%, 50%, 70% {
+          transform: translate3d(-4px, 0, 0);
+        }
+
+        40%, 60% {
+          transform: translate3d(4px, 0, 0);
+        }
+      }
+      .product-name {
+        margin: 5px;
+        font-size: rem-calc(15);
+        line-height: 1rem;
+        word-wrap: break-word;
+      }
     }
     .product-name {
       margin: 0;
