--- a/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
@@ -56,6 +56,21 @@
     border-radius: $global-radius;
     cursor: pointer;
     text-align: center;
+    position: relative;
+    &.come-in {
+      transform: translateY(400px);
+      animation: come-in 1s ease forwards;
+    }
+    &.come-in:nth-child(odd) {
+      animation-duration: 0.8s;
+    }
+    &.already-visible {
+      transform: translateY(0);
+      animation: none;
+    }
+    @keyframes come-in {
+      to { transform: translateY(0); }
+    }
     img {
       padding-bottom: $global-margin;
       -moz-transition: all 0.3s;
@@ -108,10 +123,25 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    position: relative;
     .products-image img {
       -moz-transition: all 0.3s;
       -webkit-transition: all 0.3s;
       transition: all 0.3s;
+    }
+    &.come-in {
+      transform: translateY(400px);
+      animation: come-in 1s ease forwards;
+    }
+    &.come-in:nth-child(odd) {
+      animation-duration: 0.8s;
+    }
+    &.already-visible {
+      transform: translateY(0);
+      animation: none;
+    }
+    @keyframes come-in {
+      to { transform: translateY(0); }
     }
     &.action {
       &:hover {
