add animation to product&category grids

--- a/app/design/frontend/foundation/default/template/catalog/product/list-schlag-den-preis.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/list-schlag-den-preis.phtml
@@ -116,6 +116,9 @@ $_helper = $this->helper('catalog/output');
                                 <img src="<?php echo $this->getSkinUrl('dist/assets/img/schlagdenpreis.jpg') ?>"
                                      alt="Schlag den Preis"/>
                             </a>
+                            <div class="product-name">
+                                <a class="button hollow schlagdenpreis"><?php echo $this->__('Hier klicken') ?></a>
+                            </div>
                         </li>
                     <?php } ?>
                     <li class="item">
