--- a/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
@@ -168,10 +168,13 @@
         }
       }
       .product-name {
-        margin: 5px;
+        margin: 5px 5px 0 5px;
         font-size: rem-calc(15);
         line-height: 1rem;
         word-wrap: break-word;
+        a.button {
+          margin: 0;
+        }
       }
     }
     .product-name {
