--- a/skin/frontend/foundation/default/src/assets/scss/custom/_cart.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_cart.scss
@@ -22,6 +22,10 @@
           .button-group {
             margin-bottom: 0;
           }
+          .item-msg.error {
+            @extend .callout, .alert;
+            color: $alert-color;
+          }
         }
       }
     }
