add round corners to coffee king productlist

--- a/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
@@ -205,6 +205,9 @@
     flex-direction: column;
     justify-content: space-between;
     position: relative;
+    img {
+      border-radius: $global-radius;
+    }
   }
 }
 
