--- a/app/design/frontend/foundation/default/layout/local.xml
+++ b/app/design/frontend/foundation/default/layout/local.xml
@@ -56,6 +56,11 @@
                 <type>skin_css</type>
                 <name>css/eucookielaw.css</name>
             </action>
+
+            <action method="removeItem"><type>skin_css</type><name>css/styles-ie.css</name></action>
+            <action method="removeItem"><type>js</type><name>lib/ds-sleight.js</name></action>
+            <action method="removeItem"><type>skin_js</type><name>js/ie6.js</name></action>
+
         </reference>
 
         <!--Magento's Default Sidebar Blocks-->
