--- a/app/design/frontend/foundation/default/template/catalog/product/list-kaffee-krone.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/list-kaffee-krone.phtml
@@ -109,7 +109,7 @@ $_helper = $this->helper('catalog/output');
                 <?php foreach ($_productCollection as $_product): ?>
                     <?php if ($i == 4) { ?>
                         <li class="itemwide action">
-                            <a href="<?php echo Mage::getUrl('', array('_direct' => 'kaffee')); ?>" title="Kaffee und Kaffeebohnen">
+                            <a href="<?php echo Mage::getUrl('', array('_direct' => 'bester-kaffee')); ?>" title="Kaffee und Kaffeebohnen">
                                 <img data-interchange="[<?php echo $this->getSkinUrl('dist/assets/img/kaffee-banner400x400.jpg') ?>, small], [<?php echo $this->getSkinUrl('dist/assets/img/kaffee-banner.jpg') ?>, medium]" alt="Kaffee Banner">
                             </a>
                         </li>
