--- a/app/design/frontend/foundation/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/list.phtml
@@ -103,7 +103,18 @@ $_helper = $this->helper('catalog/output');
         <?php $_collectionSize = $_productCollection->count() ?>
         <?php $_columnCount = $this->getColumnCount(); ?>
             <ul class="products-grid">
+                <?php
+                $i = 0;
+                $min = 1;
+                $max = 6;
+                $random = rand($min, $max);
+                ?>
                 <?php foreach ($_productCollection as $_product): ?>
+                    <?php if ($i == $random) { ?>
+                        <li class="item action">
+                            <a class="osterangebot"><img src="<?php echo $this->getSkinUrl('dist/assets/img/oster-grid.jpg') ?>" alt="Osterangebot 3% Rabatt auf alles!"/></a>
+                        </li>
+                    <?php } ?>
                     <li class="item">
                         <?php if ($_product->getFinalPrice() < $_product->getPrice()) { ?>
                             <?php $_savingPercent = 100 - round(($_product->getFinalPrice() / $_product->getPrice()) * 100); ?>
@@ -149,8 +160,23 @@ $_helper = $this->helper('catalog/output');
                     <?php $i++; ?>
                 <?php endforeach ?>
             </ul>
+            <div class="reveal small" id="osterangebot" data-reveal></div>
+            <script>
+                jQuery('.osterangebot').click(function () {
+                    jQuery.ajax({
+                        url: '<?php echo $this->getUrl('ajax/cms/block/id/63');?>',
+                        beforeSend: function () {
+                            jQuery('#reveal-wait').show();
+                        }
+                    })
+                        .done(function (data) {
+                            jQuery('#reveal-wait').hide();
+                            jQuery('#osterangebot').html(data).foundation('open');
+                        });
+                });
+            </script>
             <script type="text/javascript">
-                jQuery('.item').on("click", function () {
+                jQuery('.item').not('.action').on("click", function () {
                     location.href = jQuery(this).find('a').attr('href');
                 });
             </script>
