--- a/app/design/frontend/foundation/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/list.phtml
@@ -103,7 +103,21 @@ $_helper = $this->helper('catalog/output');
         <?php $_collectionSize = $_productCollection->count() ?>
         <?php $_columnCount = $this->getColumnCount(); ?>
             <ul class="products-grid">
+                <?php
+                $i = 0;
+                $random1 = rand(0, 7);
+                do {
+                    $random2 = rand(8, 14);
+                } while ($random1 == $random2);
+                ?>
                 <?php foreach ($_productCollection as $_product): ?>
+                    <?php if ($i == $random1 || $i == $random2) { ?>
+                        <li class="item action">
+                            <a href="<?php echo Mage::getUrl('', array('_direct' => 'sofortrabatt')); ?>" title="Sofortrabatt 5%">
+                                <img src="<?php echo $this->getSkinUrl('dist/assets/img/sofortrabatt.jpg') ?>" alt="Sofortrabatt 5%"/>
+                            </a>
+                        </li>
+                    <?php } ?>
                     <li class="item">
                         <?php if ($_product->getFinalPrice() < $_product->getPrice()) { ?>
                             <?php $_savingPercent = 100 - round(($_product->getFinalPrice() / $_product->getPrice()) * 100); ?>
@@ -146,6 +160,7 @@ $_helper = $this->helper('catalog/output');
                             <span class="commissioning"><?php echo $_label; ?></span>
                         <?php endif; ?>
                     </li>
+                    <?php $i++; ?>
                 <?php endforeach ?>
             </ul>
             <div class="reveal small" id="osterangebot" data-reveal></div>
